# sof-language

./: .classpath  .gitignore  .project  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Glossary.html  Guide.html  Home.html  Introduction.html  LICENSE  Programming-conventions.html  README.md  Reference.html  SOF Interpreted.launch  SOF Tests.launch  Standard-Library.html  build.gradle  index.html  manifest.mf  print.html  reference.css  searcher-c2a407aa.js  searchindex-2500526f.js  searchindex-30750652.js  searchindex.js  searchindex.json  serenity-sof  settings.gradle  sof-jar.jardesc  sof.jardesc  test.sof  toc-2895c71b.js  toc.html
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  codeql-analysis.yml  docs.yml  gradle.yml
Guide/: Functions.html  Names-Errors.html  Stack.html
Introduction/: Functions.html  Names-Errors.html  Stack.html
Reference/: Builtin-functions.html  Errors.html  Glossary.html  Language-Internals.html  Language-Specification.html  Module-System.html  Naming.html  PTs.html  Standard-Library.html  Types.html
Reference/PTs/: Arithmetic-Logic.html  Control-flow.html  Functional.html  Modules.html  Stack.html  Typing.html
Reference/Standard-Library/: List.html  list.html  math.html
Standard-Library/: List.html  math.html
docs/: book.toml
docs/src/: Glossary.md  Guide.md  Home.md  Introduction.md  Programming-conventions.md  Reference.md  SUMMARY.md  Standard-Library.md
docs/src/Guide/: Names-Errors.md
docs/src/Introduction/: Functions.md  Stack.md
docs/src/Reference/: Builtin-functions.md  Errors.md  Language-Internals.md  Language-Specification.md  Module-System.md  Naming.md  PTs.md  Standard-Library.md  Types.md
docs/src/Reference/PTs/: Arithmetic-Logic.md  Control-flow.md  Functional.md  (+3 more)
docs/src/Standard-Library/: List.md
examples/: factorial.sof  fexp.sof  fibbonachi.sof  mandelbrot.sof  numberguesser.sof  sum.sof
lib/: list.sof  math.sof  op.sof  preamble.sof
sof-rs/: Cargo.toml  build.rs
sof-rs/src/: arc_iter.rs  cli.rs  error.rs  identifier.rs  interpreter.rs  lexer.rs  main.rs  optimizer.rs  parser.rs  runtime.rs  token.rs
sof-rs/src/lib/: mod.rs  preamble.rs
sof-rs/src/parser/: lexer.rs  mod.rs
sof-rs/src/runtime/: interpreter.rs  list.rs  mod.rs  module.rs  nametable.rs  native.rs  stackable.rs  util.rs
sof-rs/src/test/: mod.rs
src/: module-info.java
src/klfr/: Tuple.java  Utility.java
src/klfr/sof/: CompilationError.java  CompilerException.java  IOInterface.java  Interpreter.java  InterpreterTest.java  NaiveInterpreter.java  Parser.java  Patterns.java  Preprocessor.java  SOFFile.java  SOFMessages.properties  TokenHandler.java  Tokenizer.java  package-info.java
test/: SOF Tests.launch
test/sourcecode/: README.md  basic.sof
test/testsource/: basic.sof
(+110 files in other folders)
