[package]
name = "sof"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = { version = "0.8", default-features = false, features = ["std"] }
env_logger = { version = "0.11", default-features = false, features = [
	"auto-color",
] }
flexstr = { version = "0.9", features = ["fp_convert", "int_convert"] }
gc-arena = "0.5"
gc-arena-derive = "0.5"
internment = { version = "0.8", default-features = false, features = ["arc"] }
log = { version = "0.4", features = ["release_max_level_info"] }
miette = { version = "7", features = ["fancy-no-backtrace"] }
rustyline = { version = "16", default-features = false }
smallvec = { version = "1", features = ["const_generics"] }
thiserror = "2"
unicode-ident = "1"

[build-dependencies]
rustversion = "1"

[features]
# Do not set this feature manually, it is always set by the build script on a nightly compiler automatically.
nightly = []

[profile.release]
debug = true
