[package]
name = "sof"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = { version = "0.8", default-features = false, features = ["std"] }
argh = { version = "0.1", default-features = false }
env_logger = { version = "0.11", default-features = false, features = [
	"auto-color",
] }
flexstr = { version = "0.9", features = ["fp_convert", "int_convert"] }
gc-arena = "0.5"
gc-arena-derive = "0.5"
internment = { version = "0.8", default-features = false, features = ["arc"] }
log = { version = "0.4", features = ["release_max_level_info"] }
miette = { version = "7", features = ["fancy-no-backtrace"] }
rustyline = { version = "16", default-features = false }
smallvec = { version = "1", features = ["const_generics"] }
thiserror = "2"
unicode-ident = "1"

[build-dependencies]
rustversion = "1"

[features]
# Do not set this feature manually, it is always set by the build script on a nightly compiler automatically.
nightly = []

[profile.release]
debug = true

[lints.clippy]
all = { level = "deny", priority = -10 }
pedantic = { level = "warn", priority = -10 }
unnecessary_wraps = "deny"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
missing_errors_doc = "allow"
inline_always = "allow"
too_many_lines = "allow"

[lints.rust]
unused = "deny"
missing_docs = "deny"

[lints.rustdoc]
all = "deny"
